# doubleo

./: Cargo.toml  README.md  config.yaml
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/components/: Authorize.vue  BasicInfo.vue  Connect.vue  NetworkSwitcher.vue  ReadTokenBalance.vue  ReadTokenSupply.vue  SignMessage.vue
frontend/pages/: index.vue
frontend/store/: wagmi.ts
src/: main.rs  middleware.rs  proxy.rs  whitelist.rs
