[package]
name = "doubleo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
eyre = "0.6"
serde_yaml = "0.9"

tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time", "json", "local-time"] }
tokio = { version = "1", features = ["time", "rt"] }
futures = { version = "0.3", features = ["compat"] }


zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e10bbdd1e863962552f37e768ae6af649353e4ea" }
zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e10bbdd1e863962552f37e768ae6af649353e4ea", features = [ "server", "client" ] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["auth"]}
http = "0.2.12"
base64 = "0.13"
hyper = "0.14"
jsonrpsee = { version = "0.21.0", default-features = false }
once_cell = "1.8"
